# generative-agentic-ai-intution

./: bag-of-words.ipynb  main.py  one-hot-encoding.ipynb  pyproject.toml  tf-idf.ipynb
notes/: 01-installation-commands.txt
