[project]
name = "modern-route-generativeai-agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "scikit-learn==1.4.2",
  "rank-bm25==0.2.2",
  "numpy==1.26.4",
  "scipy==1.11.4",
  "sentence-transformers==2.7.0",
  "gensim==4.3.2",
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "transformers>=4.41.0",
  "datasets>=2.19.0",
  "pillow>=10.2.0",
  "mteb",
  "ipykernel",
  "langchain_google_genai",
  "langchain-openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"